# EDA2KiCad

./: .gitignore  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pyproject.toml
eda2kicad/: __init__.py
libraries/: local_symbol_map.json
project_docs/: 2026-05-09-EDA2KiCad-初版实现方案.md  2026-05-09-altium-ascii-to-kicad-schematic-implementation-plan.md  2026-05-09-altium-to-kicad-schematic-design.md  2026-05-12-KiCad-GUI自动化实现计划.md  2026-05-12-KiCad-GUI自动化设计文档.md  2026-05-13-转换任务编排与产物交付实现计划.md  2026-05-13-转换任务编排与产物交付设计文档.md  GitHub_Runtime_Requirements_and_Reuse_Guide_EN.md  GitHub_运行要求与复用说明.md
src/eda2kicad/: altium_native.py  cli.py  paths.py  service.py
src/eda2kicad/altium_ascii/: lexer.py  parser.py
src/eda2kicad/core/: ir.py  report.py
src/eda2kicad/gui/: __init__.py  bundle_import.py  driver.py  pcb_import.py  runtime.py  schematic_import.py  session.py  windows.py
tests/: _paths.py  test_altium_native.py  test_bootstrap.py  test_cli.py  test_import_compat.py  test_job_planner.py  test_job_runner.py  test_job_workspace.py  test_kicad_gui_official_strategy.py  test_pcbnew_api_strategy.py  test_service.py
tests/altium_ascii/: test_parser.py
tests/core/: test_ir.py  test_report.py
tests/golden/: test_end_to_end.py  test_strategy_comparison.py
tests/gui/: test_driver.py  test_pcb_import.py  test_runtime.py  test_schematic_import.py  test_session.py
tests/kicad/: test_writer.py
tests/normalize/: test_transform.py
tests/strategies/: test_compare.py
tests/symbols/: test_resolver.py
tests/validation/: test_checks.py
tests/web/: test_app.py
(+25 files in other folders)
